  Beta function.
- New function mpfr_get_q to convert a floating-point number into rational.
- The mpfr_eint function now returns the value of the E1/eint1 function
  for negative argument.
- The behavior of the mpfr_set_exp function changed, as it could easily
  yield undefined behavior in some cases (this modifies both the API and
  the ABI).
- Function mpfr_grandom is deprecated and will be removed in a future release.
- Complete rewrite of function mpfr_sum, which now works in all cases (the
  old one could take all the memory and/or crash with inputs of different
  magnitudes in case of huge cancellation or table maker's dilemma). The
  sign of an exact zero result is now specified, and the return value is
  now the usual ternary value. Note that the position of "const" in the
  mpfr_sum prototype has been fixed (the manual was correct); user code
  should not be affected.
- Internally, improved caching: a minimum of 10% increase of the precision
  is guaranteed to avoid too many recomputations; added mpz_t caching.
- Added configure option --enable-assert=none to avoid checking any assertion.
- The --enable-decimal-float configure option no longer requires
  --with-gmp-build, and support for decimal floats is now automatically
  detected by default (similarly for support for __float128).
- Updated tuning parameters.
- Better support for Automake 1.13+ (now used to generate the tarball).
- Dropped K&R C compatibility.
- Improved MPFR manual.
- New MPFRbench program (see the tools/bench directory).
- Major speedup in mpfr_add, mpfr_sub, mpfr_mul, mpfr_div and mpfr_sqrt when
  all operands have the same precision and this precision is less than twice
  the number of bits per word, e.g., less than 128 on a 64-bit computer.
- Speedup by a factor of almost 2 in the double <--> mpfr conversions
  (mpfr_set_d and mpfr_get_d).
- Speedup in mpfr_log1p and mpfr_atanh for small arguments.
- Speedup in the mpfr_const_euler function (contributed by Fredrik Johansson),